Fixing broken css

--- a/app/assets/stylesheets/percolator.css.scss
+++ b/app/assets/stylesheets/percolator.css.scss
@@ -101,6 +101,17 @@ body {
   font-size: 18px;
 }
 
+#detail-window button {
+  margin-top: 20px;
+  font-size: 30px;
+  text-align: center;
+  font-family: Opificio;
+  background-color: #3A424F;
+  max-width: 300px;
+  border-radius: 10px;
+  border: 0px;
+}
+
 .header {
   input[type=submit] {
     margin-top: 20px;
@@ -110,6 +121,7 @@ body {
     text-align: center;
     font-family: Opificio;
     background-color: $header-submit-button;
+    max-width: 300px;
     max-width: 300px;
     border-radius: 10px;
     border: 0px;
@@ -143,7 +155,7 @@ body {
   z-index: 0;
 }
 
-#chart-popup {
+#detail-window {
   width: 100%;
   height: 100%;
   h1 {
@@ -158,24 +170,16 @@ h2, h3, h4, h5 {
 }
 
 
-#chart-popup #problem-container {
+#detail-window-problem-container {
   position: relative;
+  float: left;
   padding: 20px;
   height: 100%;
+  width: 70%;
   color: $problem-container-font;
   background-color: $problem-container-background;
   border-bottom: 1px solid $problem-container-btm-border;
   z-index: 1;
-}
-
-#problem-container {
-  p {
-    color: $problem-container-font;
-  }
-  button {
-    color: $problem-container-button;
-    background-color: $problem-container-background;
-  }
 }
 
 #bubble-container {
@@ -210,16 +214,16 @@ h2, h3, h4, h5 {
 }
 
 #welcome_message {
-  padding-top: 30px;
+  padding-top: 32px;
   text-align:right;
   font-size: 14px;
-  float: right;
+  float: left;
 }
 
 #user_logout {
   font-size: 14px;
-  text-align: right;
-  float: right;
+  text-align: left;
+  float: left;
 }
 
 #posit_link a {
@@ -232,10 +236,8 @@ h2, h3, h4, h5 {
   color: inherit;
 }
 
-.upvote, .downvote {
-  padding-top: 10px;
-  position: relative;
-  float: left;
+.vote {
+  padding-left: 10px;
 }
 
 .hidden {
@@ -309,7 +311,6 @@ h2, h3, h4, h5 {
     background-color: $frame-input-background;
     border-radius: 10px;
     border: 0px;
-    max-width: 17%;
   }
 }
 
@@ -386,27 +387,20 @@ h2, h3, h4, h5 {
   }
 }
 
-#parent {
-  overflow: hidden;
+.vote-container {
+  text-align: center;
+  float: left;
 }
 
-.right {
-  float: right;
-  padding-right: 21%;
+.detail-page-label {
+  font-size: 24px;
+  color: $problem-container-synopsis-title;
+  font-family: Opificio;
 }
 
-.left {
-  overflow: hidden;
-  width: 72%;
-}
-
-.synopsis{
-  font-size: 2em;
+#detail-page-text {
+  font-size: 18px;
   color: $problem-container-synopsis-title;
   font: Opificio;
 }
 
-#synopsis{
-  font-family: Opificio;
-  font-size: 1.25em;
-}
